--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Mixail",
   "license": "ISC",
   "devDependencies": {
+    "@fancyapps/fancybox": "github:fancyapps/fancybox",
     "browser-sync": "^2.27.7",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -18,6 +19,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.0",
+    "rateyo": "^2.3.2",
     "sass": "^1.49.0",
     "slick-carousel": "^1.8.1"
   },
